# lunch_program

./: .env  .flake8  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
api/: urls.py
api/employees/: api.py  serializers.py  urls.py
api/restaurants/: api.py  serializers.py  urls.py
apps/employees/: apps.py  models.py
apps/employees/migrations/: 0001_initial.py
apps/employees/tests/: test_serializers.py  test_views.py
apps/restaurants/: models.py
apps/restaurants/migrations/: 0001_initial.py
apps/restaurants/tests/: test_serializers.py  test_views.py
employee_lunch/: asgi.py  settings.py  urls.py  wsgi.py
